# drone_ws

./: .gitignore  .gitmodules  README.md  drone.code-workspace  drone_lab.rviz  drone_params.sh  drone_viz.rviz  pid_params_laba.yaml  todo.txt
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
bags/: 2021-09-10-08-58-26.bag
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/drone_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/mavros_link/: .catkin  .rosinstall  setup.sh
devel/.private/potential_planner/: .catkin  local_setup.sh
devel/include/drone_msgs/: Diagnostics.h  DroneInfo.h  DroneInfoArray.h  DronePose.h  Goal.h  LocalPlannerState.h  RoomParams.h  Strike.h  WindowAngleDir.h  WindowPointDir.h
devel/include/potential_planner/: PotPlannerConfig.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  drone_msgs.pc  mavros_link.pc  potential_planner.pc
devel/lib/potential_planner/: potential_planner_cpp_node
drowio/: .$drone_bort_system.drawio.bkp  drone_bort_system.drawio
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
logs/potential_planner/: build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.000.log.stderr
maps/: second_task_aerobot.pgm  second_task_aerobot.yaml
src/astar_planner/: CMakeLists.txt
src/astar_planner/launch/: astar.launch
src/astar_planner/scripts/: astar_planner_ros.py  astar_planner_ros_new.py  astar_planner_ros_server.py  astar_planner_ros_server_reactive.py  client_deb.py
src/astar_planner/srv/: GetTrajectory.srv
src/chord_regulator/: CMakeLists.txt  package.xml
src/chord_regulator/include/chord_regulator/: ChordRegNode.h  ChordRegulator.h  controller_deb.h
src/chord_regulator/src/: ChordRegNode.cpp  ChordRegulator.cpp  controller_deb.cpp
src/command_manager/: CMakeLists.txt  package.xml
src/command_manager/scripts/: command_manager.py  trj_caller_deb.py
src/console_command_control/scripts/: commander.py  curses_learn.py  curses_learn_2.py
src/contour_planner/: CMakeLists.txt  package.xml
src/contour_planner/src/: move_along_contour.cpp
src/drone_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/drone_bringup/configuration_files/: fixed_joint_hexa.urdf  octomap.yaml  rplidar.lua  rplidar_pc.lua
src/drone_bringup/launch/: bringup_gps.launch  bringup_rtls.launch  bringup_slam.launch  bringup_slam_hexa.launch  cartograpther.launch  cartograpther_pc.launch  fixed_joint.launch  move_base.launch  octomap_mapping.launch  pot_planner.launch  reg_hexa.launch  remote.launch  rplidar.launch  uav.launch
src/drone_bringup/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
src/drone_bringup/params/: px4_pluginlists.yaml
src/drone_bringup/scripts/: drone_safe_node.py  footprint_tf_node.py  geo_reference.py  ground_lidar_seek_ros.py  ground_ultrasonic_ros.py  init_state.py  msg_to_tf2.py  rtls_averaging.py
src/drone_essentials/: CMakeLists.txt  package.xml
src/drone_essentials/cartographer_conf/: lidar_2d.lua  lidar_2d_gek_params.lua
src/drone_essentials/launch/: bringup_gps.launch  bringup_gps_sim.launch  bringup_realsense.launch  bringup_slam.launch  bringup_zed2i.launch  cartographer_lidar_imu.launch  cartographer_lidar_odom_gek.launch  gmapping.launch  octomap_realsense.launch  realsense_d435i_t265.launch  reg.launch  start.launch
src/drone_essentials/scripts/: drone_safe_node.py  ground_lidar_seek_ros.py
src/drone_essentials/urdf/: fixed_joint.urdf  iris_model.xacro
src/drone_msgs/: CMakeLists.txt
src/drone_msgs/msg/: CmdManagerControlCmd.msg  GlobalTrajectory.msg  Task.msg  TaskCmd.msg  TaskManagerControlCmd.msg
src/drone_reg/: CMakeLists.txt  README.md  setup.py
src/drone_reg/cfg/: DroneReg.cfg  pid_params_bila.yaml  pid_params_hexa.yaml  pid_params_laba.yaml  pid_params_laba_bila.yaml  pid_params_laba_iris.yaml
src/drone_reg/scripts/drone_reg/: drone_pose_reg_node.py  pid_params_saver.py
src/drone_reg/src/: drone_reg_node.cpp
src/drone_statistics/: package.xml
src/drone_statistics/scripts/: plotter.py
src/emlid_rtk_translator/: package.xml  setup.cfg  setup.py
src/emlid_rtk_translator/emlid_rtk_translator/: emlid_rtk_translator.py
src/essentials_utils/: CMakeLists.txt  package.xml
src/joy_to_mavros/: CMakeLists.txt  package.xml
src/joy_to_mavros/src/: JoyToMavros.cpp
src/mavros_link/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mavros_link/launch/: node.launch  px4.launch  px4_config.yaml  px4_gps.launch  px4_realsense.launch  px4_rtls.launch  px4_slam.launch  px4_zed2i.launch  uav.launch
src/mavros_link/param/: px4_config.yaml  px4_config_gps.yaml  px4_config_realsense.yaml  px4_config_rtls.yaml  px4_config_slam.yaml  px4_config_zed2i.yaml
src/mavros_link/params/: px4_config.yaml  (+1 more)
src/packageInDev/copter_controle/: CMakeLists.txt  package.xml
src/packageInDev/copter_controle/include/copter_controle/: personal_function.h
src/packageInDev/copter_controle/src/: personal_function.h
src/packageInDev/pcl_frame_detector/: CMakeLists.txt  package.xml
src/packageInDev/pcl_frame_detector/src/: pcl.cpp
src/packageInDev/pcl_programs/: CMakeLists.txt  package.xml  pcl.txt
src/packageInDev/pcl_programs/src/: pcl_camera_eater.cpp  pcl_laser_scan.cpp  pcl_laser_scan_eater.cpp
src/positional_regulator/: CMakeLists.txt  package.xml
src/positional_regulator/include/positional_regulator/: PositionalRegulator.h
src/positional_regulator/src/: PositionalRegulator.cpp  pid_regulator_class.cpp  vremja  vremja.cpp
src/potential_planner/: CMakeLists.txt  setup.py
src/rtk_brodcast/: CMakeLists.txt  README.md  package.xml
src/task_manager/: package.xml
src/unstable_planner/: README.md  package.xml
src/usb_cam_bringup/: package.xml  setup.cfg  setup.py
(+269 files in other folders)
